<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/cotton_candy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/cotton_candy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/cotton_candy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tradewind"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/blue_500"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toEndOf="@id/gdStart" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ilPassword"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toEndOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:autofillHints="username"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:theme="@style/TextFieldTheme"
            android:hint="@string/sign_in_screen_login_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnAction"
        android:layout_marginTop="@dimen/cotton_candy"
        app:layout_constraintEnd_toEndOf="@id/ilLogin"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toEndOf="@id/gdStart"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/ilLogin"
        app:layout_constraintTop_toBottomOf="@id/ilLogin">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:theme="@style/TextFieldTheme"
            android:hint="@string/sign_in_screen_password_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAction"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/malibu"
        android:text="@string/sign_in_screen_action"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/orLabel"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toEndOf="@id/gdStart" />

    <TextView
        android:id="@+id/orLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/malibu"
        android:text="@string/sign_in_screen_or_label"
        app:layout_constraintBottom_toTopOf="@id/tbAction"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toEndOf="@id/gdStart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tbAction"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_button_height"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/sign_in_screen_sso_action"
        app:layout_constraintBottom_toTopOf="@id/gdBottom"
        app:layout_constraintEnd_toStartOf="@id/gdEnd"
        app:layout_constraintStart_toEndOf="@id/gdStart" />

</androidx.constraintlayout.widget.ConstraintLayout>